[package]
name = "grid-vault"
version = "0.1.0"
description = "A Solana vault program with treasury, shares, and performance fees, built with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "grid_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
bytemuck = { version = "1.23.2", features = ["derive"] }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(feature, values("anchor-debug", "custom-heap", "custom-panic"))',
    'cfg(target_os, values("solana"))',
]}
deprecated = "allow"