[package]
name = "grid-vault"
version = "0.1.0"
description = "A Solana vault program with treasury, shares, and performance fees, built with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "grid_vault"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
bytemuck = { version = "1.23.2", features = ["derive"] }

